src/objects/Technical_Support_Team__c.object
<CustomObject>
    <description>CAS: Technical Support Team</description>
    <fields>
        <fullName>CAS_1_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAS 1 Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Project_Support</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAS_2_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CAS 2 Engineer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Customer_Project_Support1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Project__c</fullName>
        <label>Customer Project</label>
        <referenceTo>Customer_Project__c</referenceTo>
        <relationshipName>Customer_Project_Support</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>External Id for mass upload</description>
        <externalId>true</externalId>
        <label>Legacy Id</label>
        <length>36</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MAG__c</fullName>
        <label>MAG</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MAG</valueSetName>
        </valueSet>
    </fields>
    <label>Technical Support Team</label>
    <nameField>
        <displayFormat>TST-{0000000}</displayFormat>
        <label>Team Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Support Team</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>